tests/dataset/tpc-ds/compiler/java/q93.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq932344447696/001/Q93.java:259: error: incompatible types: possible lossy conversion from double to int
    if (!(Objects.equals(result, Arrays.asList(new SsCustomerSkSumsales(1, 40.000000), new SsCustomerSkSumsales(2, 60.000000))))) throw new AssertionError("expect failed");
                                                                           ^
/tmp/TestJavaCompiler_TPCDSQueriesq932344447696/001/Q93.java:259: error: incompatible types: possible lossy conversion from double to int
    if (!(Objects.equals(result, Arrays.asList(new SsCustomerSkSumsales(1, 40.000000), new SsCustomerSkSumsales(2, 60.000000))))) throw new AssertionError("expect failed");
                                                                                                                   ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
